[package]
name = "star_background_map"
version = "0.1.0"
edition = "2021"
authors = ["André Augusto Bortoli <andre@bortoli.phd>"]
description = "Library for generating star background maps"
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Document", "HtmlElement", "CssStyleDeclaration", "StyleSheetList", "StyleSheet", "CssStyleSheet", "console", "HtmlStyleElement", "HtmlHeadElement"] }

[dev-dependencies]
approx = "0.5.1"
wasm-bindgen-test = "0.3.39"
